--- a/index.html
+++ b/index.html
@@ -10,6 +10,23 @@
     />
   </head>
   <body>
-    <script src="index.js"></script>
+    <div class="row">
+        <div class="col s8 offset-s2">
+          <div class="card-panel">
+            <form>
+              <label>Enter a Secret Message</label>
+              <input id="message-input" />
+              <button class="btn">Create</button>
+            </form>
+          </div>
+  
+          <div>
+            Share this link with a friend
+            <input id="link-input" />
+          </div>
+        </div>
+      </div>
+      <script src="index.js"></script>
+    </body>
   </body>
 </html>
