--- a/index.html
+++ b/index.html
@@ -9,21 +9,27 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
     />
   </head>
+  <style>
+	  .row{
+		  margin-top: 25vh;
+	  }
+  </style>
   <body>
     <div class="row">
         <div class="col s8 offset-s2">
-          <div class="card-panel">
+          <div id="message-form" class="card-panel">
             <form>
               <label>Enter a Secret Message</label>
               <input id="message-input" />
               <button class="btn">Create</button>
             </form>
           </div>
-  
-          <div>
-            Share this link with a friend
-            <input id="link-input" />
-          </div>
+          <div id="link-form" class="card-panel hide">
+            <div>
+                Share this link with a friend
+                <input id="link-input" />
+            </div>
+        </div>  
         </div>
       </div>
       <script src="index.js"></script>
